Setting to 800 to prevent any scrollbars while maximized

--- a/src/_scss/pages/dashboard/table/summary.scss
+++ b/src/_scss/pages/dashboard/table/summary.scss
@@ -1,6 +1,6 @@
 .submission-info {
     color: $color-gray;
-    max-width: rem(700);
+    max-width: rem(800);
 
     .results-table-content{
         min-height: rem(80);
